# flutter_opencv_dlib

./: .gitattributes  .gitignore  .metadata  README.md  pubspec.yaml
BUILD_LIBS/buildDlib/: buildDlib-android  buildDlib-windows.bat  gitCloneDlib  gitCloneDlib.bat
BUILD_LIBS/buildOpenCV/: buildOpenCV.bat  copyLibs-android  gitCloneOpenCV.bat
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/dlib/include/dlib/: config.h  revision.h
android/src/main/java/com/bavagnoli/flutter_opencv_dlib/: FlutterOpencvDlibPlugin.java
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/bavagnoli/flutter_opencv_dlib_example/: MainActivity.java
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: camera_stack.dart  main.dart  main_desktop.dart  points_painter.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_opencv_dlib.podspec
ios/Classes/: FlutterOpencvDlibPlugin.h  FlutterOpencvDlibPlugin.m  SwiftFlutterOpencvDlibPlugin.swift
ios/Classes/cpp/: common.cpp  common.h  face_common.h  facedetector.cpp  facedetector.h  facerecognition.cpp  facerecognition.h  fixed_queue.h  native-lib.cpp
lib/: flutter_opencv_dlib.dart  flutter_opencv_dlib_method_channel.dart  flutter_opencv_dlib_platform_interface.dart
lib/src/: bmp_header.dart  common.dart  detector_interface.dart  face_points.dart  recognizer_interface.dart
lib/src/desktop/: camera.dart
linux/: CMakeLists.txt  flutter_opencv_dlib_plugin.cc
linux/gl/: fl_my_texture_gl.cc  fl_my_texture_gl.h
linux/include/flutter_opencv_dlib/: flutter_opencv_dlib_plugin.h
macos/: flutter_opencv_dlib.podspec
macos/Classes/: FlutterOpencvDlibPlugin.swift
test/: flutter_opencv_dlib_method_channel_test.dart  flutter_opencv_dlib_test.dart
windows/: CMakeLists.txt  flutter_opencv_dlib_plugin.cpp  flutter_opencv_dlib_plugin.h  flutter_opencv_dlib_plugin_c_api.cpp
windows/include/flutter_opencv_dlib/: flutter_opencv_dlib_plugin_c_api.h
